Update tokenizer and training dataset

--- a/DataPreprocessing.ipynb
+++ b/DataPreprocessing.ipynb
@@ -8,7 +8,7 @@
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
-    "from utils import get_text"
+    "from utils import get_text, prompt_basic, prompt_qa, prompt_instruct"
    ]
   },
   {
@@ -650,7 +650,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_clean_final['text'] = df_clean_final.apply(get_text, axis=1)"
+    "df_clean_final['text'] = df_clean_final.apply(\n",
+    "    lambda x: get_text(x, prompt=prompt_instruct), axis=1)\n",
+    "\n",
+    "# df_clean_final['text_instruct'] = df_clean_final.apply(\n",
+    "#     lambda x: get_text(x, prompt=prompt_instruct), axis=1)"
    ]
   },
   {
@@ -779,15 +783,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "name_and_title_words = []\n",
-    "for list_text in df_out['source'].apply(lambda x: x.split('\\n')[0].split()[:10]):\n",
-    "    for text in list_text:\n",
-    "        name_and_title_words.append(text.lower())"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
