Finalize inference script

--- a/DataPreprocessing.ipynb
+++ b/DataPreprocessing.ipynb
@@ -8,7 +8,8 @@
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
-    "from utils import get_text, prompt_basic, prompt_qa, prompt_instruct"
+    "from utils import get_text, get_text_gen, prompt_basic, prompt_qa, \\\n",
+    "    prompt_instruct, prompt_instruct_gen"
    ]
   },
   {
@@ -759,13 +760,25 @@
    "source": [
     "df_out[df_out['train']].reset_index(drop=True).to_parquet(\n",
     "    'data/clean/health_qa_train.parquet')\n",
-    "df_out[~df_out['train']].reset_index(drop=True).to_parquet(\n",
-    "    'data/clean/health_qa_test.parquet')"
+    "# df_out[~df_out['train']].reset_index(drop=True).to_parquet(\n",
+    "#     'data/clean/health_qa_test.parquet')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_test = df_out[~df_out['train']].reset_index(drop=True).copy()\n",
+    "df_test['text_gen'] = df_test.apply(\n",
+    "    lambda x: get_text_gen(x, prompt=prompt_instruct_gen), axis=1)\n",
+    "df_test.to_parquet('data/clean/health_qa_test.parquet')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -774,7 +787,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Dưới đây là một câu hỏi về sức khoẻ. Hãy viết một câu trả lời phù hợp.\\n\\n### Câu hỏi:\\nĂn bao nhiêu miếng bánh chưng thì không béo?\\n\\n### Trả lời:'"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_test.iloc[0]['text_gen']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
